--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^8.0.58",
     "@types/react": "^16.0.29",
     "@types/react-dom": "^16.0.3",
+    "mobx-react-devtools": "^4.2.15",
     "typescript": "^2.6.2",
     "typescript-styled-plugin": "^0.2.2"
   }
