--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "react": "^16.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.2.0",
     "react-scripts-ts": "2.8.0",
     "styled-components": "^2.2.4"
@@ -20,6 +21,7 @@
     "@types/jest": "^21.1.8",
     "@types/node": "^8.0.58",
     "@types/react": "^16.0.29",
+    "@types/react-addons-css-transition-group": "^15.0.3",
     "@types/react-dom": "^16.0.3",
     "mobx-react-devtools": "^4.2.15",
     "typescript": "^2.6.2",
